--- a/configuration/binoc/newtobinparadigm/vsftpd/users/CMakeLists.txt
+++ b/configuration/binoc/newtobinparadigm/vsftpd/users/CMakeLists.txt
@@ -3,7 +3,26 @@ SETUP_FINAL_TARGET()
 AURA_DEFINES()
 
 
-build_func_preprocess(capture ${FINAL_TARGET}/capture)
-build_func_preprocess(files ${FINAL_TARGET}/files)
-build_func_preprocess(mattatobin ${FINAL_TARGET}/mattatobin)
-build_func_preprocess(private ${FINAL_TARGET}/private)
+build_func_preprocess(
+    capture
+    ${FINAL_TARGET}/capture
+    ${varAuraDefines}
+)
+
+build_func_preprocess(
+    files
+    ${FINAL_TARGET}/files
+    ${varAuraDefines}
+)
+
+build_func_preprocess(
+    mattatobin
+    ${FINAL_TARGET}/mattatobin
+    ${varAuraDefines}
+)
+
+build_func_preprocess(
+    private
+    ${FINAL_TARGET}/private
+    ${varAuraDefines}
+)
