--- a/configuration/mcp/palemoon/nginx/CMakeLists.txt
+++ b/configuration/mcp/palemoon/nginx/CMakeLists.txt
@@ -7,20 +7,14 @@ AURA_DEFINES()
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.service.in
     ${FINAL_TARGET}/aura-${varUserClass}-${varUserName}-nginx.service
-    -DAURA_VERSION="${varTargetAuraVersion}"
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
 )
 
 # Userscope Nginx Server Instance
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.conf.in
     ${FINAL_TARGET}/nginx.conf
-    -DAURA_VERSION="${varTargetAuraVersion}"
-    -DAURA_IPV4="${varSystemIPv4}"
-    -DAURA_IPV6="${varSystemIPv6}"
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
 )
 
 # Proxy file for addons.palemoon.org
@@ -28,11 +22,7 @@ set(varDomain "addons.palemoon.org")
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
     ${FINAL_TARGET}/${varDomain}.proxy
-    -DAURA_VERSION="${varTargetAuraVersion}"
-    -DAURA_IPV4="${varSystemIPv4}" 
-    -DAURA_IPV6="${varSystemIPv6}"
-    -DAURA_USER_CLASS="${varUserClass}" 
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
     -DNGX_DOMAIN="${varDomain}"
     -DNGX_ENABLE_SSL=1
     -DNGX_SSL_CERT="${varDomain}"
@@ -46,9 +36,7 @@ set(varDomain "${varSubdomain}.${varRootDomain}")
 build_func_preprocess(
     ${varDomain}.vhost.in
     ${FINAL_TARGET}/${varDomain}.vhost
-    -DAURA_VERSION="${varTargetAuraVersion}"
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
     -DNGX_DOMAIN="${varDomain}"
     -DNGX_ROOTDOMAIN="${varRootDomain}"
     -DNGX_SUBDOMAIN="${varSubdomain}"
@@ -61,11 +49,7 @@ set(varDomain "dev.addons.palemoon.org")
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
     ${FINAL_TARGET}/${varDomain}.proxy
-    -DAURA_VERSION="${varTargetAuraVersion}"
-    -DAURA_IPV4="${varSystemIPv4}"
-    -DAURA_IPV6="${varSystemIPv6}"
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
     -DNGX_DOMAIN="${varDomain}"
     -DNGX_ENABLE_SSL=1
     -DNGX_SSL_CERT="addons.palemoon.org"
@@ -78,9 +62,7 @@ set(varDomain "${varSubdomain}.${varRootDomain}")
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
     ${FINAL_TARGET}/${varDomain}.vhost
-    -DAURA_VERSION="${varTargetAuraVersion}"
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
     -DNGX_DOMAIN="${varDomain}"
     -DNGX_ROOTDOMAIN="${varRootDomain}"
     -DNGX_SUBDOMAIN="${varSubdomain}"
@@ -94,11 +76,7 @@ set(varDomain "developer.palemoon.org")
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
     ${FINAL_TARGET}/${varDomain}.proxy
-    -DAURA_VERSION="${varTargetAuraVersion}"
-    -DAURA_IPV4="${varSystemIPv4}"
-    -DAURA_IPV6="${varSystemIPv6}"
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
     -DNGX_DOMAIN="${varDomain}"
     -DNGX_ENABLE_SSL=1
     -DNGX_SSL_CERT="${varDomain}"
@@ -111,9 +89,7 @@ set(varDomain "${varSubdomain}.${varRootDomain}")
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
     ${FINAL_TARGET}/${varDomain}.vhost
-    -DAURA_VERSION="${varTargetAuraVersion}"
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
     -DNGX_DOMAIN="${varDomain}"
     -DNGX_ROOTDOMAIN="${varRootDomain}"
     -DNGX_SUBDOMAIN="${varSubdomain}"
