--- a/configuration/mcp/palemoon/vsftpd/CMakeLists.txt
+++ b/configuration/mcp/palemoon/vsftpd/CMakeLists.txt
@@ -3,6 +3,20 @@ SETUP_FINAL_TARGET()
 AURA_DEFINES()
 
 
-build_func_preprocess(vsftpd.service ${FINAL_TARGET}/aura-${varUserClass}-${varUserName}-vsftpd.service)
-build_func_preprocess(vsftpd.conf ${FINAL_TARGET}/vsftpd.conf)
-build_func_preprocess(vsftpd.pam ${FINAL_TARGET}/vsftpd.pam)
+build_func_preprocess(
+    vsftpd.service
+    ${FINAL_TARGET}/aura-${varUserClass}-${varUserName}-vsftpd.service
+    ${varAuraDefines}
+)
+
+build_func_preprocess(
+    vsftpd.conf
+    ${FINAL_TARGET}/vsftpd.conf
+    ${varAuraDefines}
+)
+
+build_func_preprocess(
+    vsftpd.pam
+    ${FINAL_TARGET}/vsftpd.pam
+    ${varAuraDefines}
+)
