--- a/configuration/binoc/binaryoutcast/nginx/CMakeLists.txt
+++ b/configuration/binoc/binaryoutcast/nginx/CMakeLists.txt
@@ -7,20 +7,14 @@ AURA_DEFINES()
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.service.in
     ${FINAL_TARGET}/aura-${varUserClass}-${varUserName}-nginx.service
-    -DAURA_VERSION="${varTargetAuraVersion}"
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
 )
 
 # Userscope Nginx Server Instance
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.conf.in
     ${FINAL_TARGET}/nginx.conf
-    -DAURA_VERSION="${varTargetAuraVersion}"
-    -DAURA_IPV4="${varSystemIPv4}"
-    -DAURA_IPV6="${varSystemIPv6}"
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
 )
 
 # Proxy file for binaryoutcast.com
@@ -28,11 +22,7 @@ set(varDomain "binaryoutcast.com")
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
     ${FINAL_TARGET}/www.${varDomain}.proxy
-    -DAURA_VERSION="${varTargetAuraVersion}"
-    -DAURA_IPV4="${varSystemIPv4}"
-    -DAURA_IPV6="${varSystemIPv6}"
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
     -DNGX_DOMAIN="${varDomain}"
     -DNGX_MAINDOMAIN=1
 )
@@ -44,9 +34,7 @@ set(varDomain ${varRootDomain})
 build_func_preprocess(
     www.${varDomain}.vhost.in
     ${FINAL_TARGET}/www.${varDomain}.vhost
-    -DAURA_VERSION="${varTargetAuraVersion}"
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
     -DNGX_DOMAIN="${varDomain}"
     -DNGX_ROOTDOMAIN="${varRootDomain}"
     -DNGX_SUBDOMAIN="${varSubdomain}"
@@ -57,11 +45,7 @@ set(varDomain "techcentral.binaryoutcast.com")
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
     ${FINAL_TARGET}/${varDomain}.proxy
-    -DAURA_VERSION="${varTargetAuraVersion}"
-    -DAURA_IPV4="${varSystemIPv4}"
-    -DAURA_IPV6="${varSystemIPv6}"
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
     -DNGX_DOMAIN="${varDomain}"
 )
 
@@ -72,9 +56,7 @@ set(varDomain "${varSubdomain}.${varRootDomain}")
 build_func_preprocess(
     ${varDomain}.vhost.in
     ${FINAL_TARGET}/${varDomain}.vhost
-    -DAURA_VERSION="${varTargetAuraVersion}"
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
     -DNGX_DOMAIN="${varDomain}"
     -DNGX_ROOTDOMAIN="${varRootDomain}"
     -DNGX_SUBDOMAIN="${varSubdomain}"
@@ -85,11 +67,7 @@ set(varDomain "repository.binaryoutcast.com")
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
     ${FINAL_TARGET}/${varDomain}.proxy
-    -DAURA_VERSION="${varTargetAuraVersion}"
-    -DAURA_IPV4="${varSystemIPv4}"
-    -DAURA_IPV6="${varSystemIPv6}"
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
     -DNGX_DOMAIN="${varDomain}"
 )
 
@@ -100,9 +78,7 @@ set(varDomain "${varSubdomain}.${varRootDomain}")
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
     ${FINAL_TARGET}/${varDomain}.vhost
-    -DAURA_VERSION="${varTargetAuraVersion}"
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
     -DNGX_DOMAIN="${varDomain}"
     -DNGX_ROOTDOMAIN="${varRootDomain}"
     -DNGX_SUBDOMAIN="${varSubdomain}"
