--- a/configuration/binoc/binaryoutcast/php/CMakeLists.txt
+++ b/configuration/binoc/binaryoutcast/php/CMakeLists.txt
@@ -8,8 +8,7 @@ file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${FINAL_TARGET}/session)
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/php/php-pool.conf.in
     ${FINAL_TARGET}/php-pool.conf 
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
     -DPHP_ENABLE_LARGE_POOL=1
 )
 
@@ -17,8 +16,7 @@ build_func_preprocess(
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/php/php-pool.conf.in
     ${FINAL_TARGET}/php56-pool.conf
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
     -DPHP_ENABLE_LARGE_POOL=1
     -DPHP_VERSION_56
 )
@@ -27,8 +25,7 @@ build_func_preprocess(
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/php/php-pool.conf.in
     ${FINAL_TARGET}/php70-pool.conf
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
     -DPHP_ENABLE_LARGE_POOL=1
     -DPHP_VERSION_70
 )
