--- a/configuration/binoc/newtobinparadigm/nginx/CMakeLists.txt
+++ b/configuration/binoc/newtobinparadigm/nginx/CMakeLists.txt
@@ -1,26 +1,19 @@
 build_macro_mkPaths()
 SETUP_FINAL_TARGET()
-
-
+AURA_DEFINES()
 
 # Userscope Nginx systemd Service
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.service.in
     ${FINAL_TARGET}/aura-${varUserClass}-${varUserName}-nginx.service
-     -DAURA_VERSION="${varTargetAuraVersion}"
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
 )
 
 # Userscope Nginx Server Instance
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.conf.in
     ${FINAL_TARGET}/nginx.conf
-    -DAURA_VERSION="${varTargetAuraVersion}"
-    -DAURA_IPV4="${varSystemIPv4}"
-    -DAURA_IPV6="${varSystemIPv6}"
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
 )
 
 # Proxy file for mattatobin.com
@@ -28,11 +21,7 @@ set(varDomain "mattatobin.com")
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
     ${FINAL_TARGET}/www.${varDomain}.proxy
-    -DAURA_VERSION="${varTargetAuraVersion}"
-    -DAURA_IPV4="${varSystemIPv4}"
-    -DAURA_IPV6="${varSystemIPv6}"
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
     -DNGX_DOMAIN="${varDomain}"
     -DNGX_MAINDOMAIN=1
 )
@@ -44,9 +33,7 @@ set(varDomain ${varRootDomain})
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
     ${FINAL_TARGET}/www.${varDomain}.vhost
-    -DAURA_VERSION="${varTargetAuraVersion}"
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
     -DNGX_DOMAIN="${varDomain}"
     -DNGX_ROOTDOMAIN="${varRootDomain}"
     -DNGX_SUBDOMAIN="${varSubdomain}"
@@ -60,11 +47,7 @@ set(varDomain "personal.mattatobin.com")
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
     ${FINAL_TARGET}/${varDomain}.proxy
-    -DAURA_VERSION="${varTargetAuraVersion}"
-    -DAURA_IPV4="${varSystemIPv4}"
-    -DAURA_IPV6="${varSystemIPv6}"
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
     -DNGX_DOMAIN="${varDomain}"
 )
 
@@ -75,9 +58,7 @@ set(varDomain "${varSubdomain}.${varRootDomain}")
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
     ${FINAL_TARGET}/${varDomain}.vhost
-    -DAURA_VERSION="${varTargetAuraVersion}"
-    -DAURA_USER_CLASS="${varUserClass}"
-    -DAURA_USER_NAME="${varUserName}"
+    ${varAuraDefines}
     -DNGX_DOMAIN="${varDomain}"
     -DNGX_ROOTDOMAIN="${varRootDomain}"
     -DNGX_SUBDOMAIN="${varSubdomain}"
