--- a/configuration/binoc/newtobinparadigm/vsftpd/CMakeLists.txt
+++ b/configuration/binoc/newtobinparadigm/vsftpd/CMakeLists.txt
@@ -2,22 +2,17 @@ build_macro_mkPaths()
 SETUP_FINAL_TARGET()
 AURA_DEFINES()
 
+# Copy files wholesale
+set(SOURCE_FILES
+    ${mk_srcdir}/vsftpd.conf
+    ${mk_srcdir}/vsftpd.pam
+)
+
+COPY_TO_DIST("${SOURCE_FILES}")
 
 build_func_preprocess(
     vsftpd.service
     ${FINAL_TARGET}/aura-${varUserClass}-${varUserName}-vsftpd.service
-    ${varAuraDefines}
-)
-
-build_func_preprocess(
-    vsftpd.conf
-    ${FINAL_TARGET}/vsftpd.conf
-    ${varAuraDefines}
-)
-
-build_func_preprocess(
-    vsftpd.pam
-    ${FINAL_TARGET}/vsftpd.pam
     ${varAuraDefines}
 )
 
