--- a/configuration/system/nginx/CMakeLists.txt
+++ b/configuration/system/nginx/CMakeLists.txt
@@ -2,6 +2,13 @@ build_macro_mkPaths()
 SETUP_FINAL_TARGET()
 AURA_DEFINES()
 
+# Copy files wholesale
+set(SOURCE_FILES
+    ${mk_srcdir}/mime-types.inc
+    ${mk_srcdir}/standard-php.inc
+)
+
+COPY_TO_DIST("${SOURCE_FILES}")
 
 # System Nginx systemd Service
 build_func_preprocess(
@@ -17,18 +24,6 @@ build_func_preprocess(
     ${FINAL_TARGET}/nginx.conf
     ${varAuraDefines}
     -DNGX_GLOBAL=1
-)
-
-# Use build_func_preprocess to copy files (This would be better served by another function but I want this to happen in 'build time' instead of 'configure time')
-build_func_preprocess(
-    mime-types.inc
-    ${FINAL_TARGET}/mime-types.inc
-    ${varAuraDefines}
-)
-build_func_preprocess(
-    standard-php.inc
-    ${FINAL_TARGET}/standard-php.inc
-    ${varAuraDefines}
 )
 
 add_subdirectory(certs)
